skins/default/application.css
html, body {
  height: 100%; }

body {
  background-color: white;
  font-family: arial, helvetica, sans-serif;
  font-size: 12px; }
  body > header {
    background-color: lightgrey;
    border-bottom: solid darkgrey 1px;
    height: 52px; }
    body > header > .connect {
      background: url("img/disconnect-left.png") no-repeat left -2px;
      display: inline-block;
      float: left;
      padding: 2px 0; }
      body > header > .connect > a {
        color: transparent;
        display: inline-block;
        font-size: 1px;
        height: 24px;
        padding-left: 28px;
        width: 24px; }
        body > header > .connect > a > .login {
          color: #404040;
          font-size: 14px;
          font-style: italic;
          font-weight: bold; }
      body > header > .connect:hover {
        background-image: url("img/disconnect-left-animate.gif"); }
        body > header > .connect:hover > a > .login {
          color: #800000;
          text-decoration: underline; }
    body > header > ul.links {
      margin: 0 4px;
      position: fixed;
      right: 0;
      top: 0;
      z-index: 1000000000; }
      body > header > ul.links > li {
        list-style: none; }
      body > header > ul.links > li > a {
        display: inline-block; }
      body > header > ul.links > li.provider {
        background: 20px 5px no-repeat white;
        border: #9ab3b7 solid;
        border-radius: 0 0 10px 10px;
        border-width: 0 1px 1px;
        box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2); }
        body > header > ul.links > li.provider > a {
          color: transparent;
          height: 46px; }
        body > header > ul.links > li.provider.bappli {
          background-image: url("img/bappli-studio-36.png"); }
          body > header > ul.links > li.provider.bappli > a {
            width: 182px; }
        body > header > ul.links > li.provider.itrocks {
          background-image: url("img/itrocks-36.png"); }
          body > header > ul.links > li.provider.itrocks > a {
            width: 130px; }
      body > header > ul.links > li:not(.provider) {
        background: url("img/tab_background.png");
        border-color: #d6dadc #9ab3b7 #9ab3b7;
        border-radius: 0 0 10px 10px;
        border-style: solid;
        border-width: 1px;
        display: none;
        float: right;
        margin: 5px 0 0 10px;
        position: relative;
        z-index: 999999999; }
        body > header > ul.links > li:not(.provider) > a {
          color: #222;
          font-size: 16px;
          font-weight: bold;
          height: 25px;
          line-height: 25px;
          padding: 0 10px;
          text-decoration: none;
          white-space: nowrap; }
          body > header > ul.links > li:not(.provider) > a:hover {
            color: #2d8f8d; }
      body > header > ul.links:hover > li:not(.provider) {
        display: inline-block; }

div p:not(:first-child) {
  margin-top: 1em; }
div p:not(:last-child) {
  margin-bottom: 1em; }

em {
  font-style: italic; }

h1 {
  font-size: 1.6em; }

h2 {
  font-size: 1.4em; }

h3 {
  font-size: 1.2em; }

hr {
  border: 1px solid darkgray;
  height: 0;
  margin: .5em; }

li {
  list-style-position: inside;
  margin-left: 1em; }

strong {
  font-weight: bold; }

sub {
  font-size: smaller;
  line-height: normal;
  vertical-align: sub; }

sup {
  font-size: smaller;
  line-height: normal;
  vertical-align: super; }

table, tbody, thead, tr, td, th {
  border-spacing: 0;
  padding: 0 2px; }

tbody > tr > th {
  text-align: left; }

thead > tr > th {
  text-align: center; }

#main {
  height: 100%;
  white-space: nowrap; }
  #main > * {
    white-space: normal; }

/* TODO tidy */
.delete.message,
.remove.message {
  background: url("img/talk_down.png") bottom right no-repeat;
  padding-bottom: 7px; }
  .delete.message div, .delete.message h2,
  .remove.message div,
  .remove.message h2 {
    background-color: white;
    border-right: 1px solid black;
    display: block;
    padding: 0 3px 1px 3px; }

.candrop {
  box-shadow: 0 0 3px 3px red; }

.dragging {
  border: 1px solid lightgray;
  border-radius: 2px;
  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
  cursor: move;
  padding: 0 4px; }

.empty {
  color: #777;
  font-style: italic; }

.error {
  background-color: red;
  border-radius: 3px;
  color: white;
  font-size: 1.5em;
  margin: -3px;
  padding: 3px; }
  .error .technical {
    display: none; }

.visible {
  display: inline-block; }

.warning {
  background-color: orange;
  border-radius: 3px;
  color: white;
  font-size: 1.3em;
  margin: -3px;
  padding: 3px; }

#messages {
  background-color: white;
  border: 1px solid lightgray;
  border-radius: 3px;
  box-shadow: 0 0 1px 1px rgba(0, 0, 0, 0.1);
  display: inline-block;
  left: 4px;
  max-width: 80%;
  padding: 16px 3px 3px 3px;
  position: fixed !important;
  top: 4px;
  z-index: 1000000000 !important; }
  #messages:after {
    content: 'x';
    cursor: pointer;
    position: absolute;
    right: 3px;
    text-align: center;
    top: 0;
    width: 1em; }
  #messages:before {
    background-color: lightblue;
    content: ' ';
    cursor: move;
    height: 13px;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%; }
  #messages:empty {
    display: none; }

.ui-draggable > h2 {
  cursor: move; }

.logger.query {
  background-color: lightcyan;
  border: 1px solid lightblue;
  color: darkblue;
  margin: 4px;
  padding: 4px; }
.logger.error {
  background-color: darkred;
  border: 1px solid red;
  color: white;
  margin: 4px;
  padding: 4px; }
  .logger.error:before {
    content: "ERREUR : "; }

.minimize {
  background: url("img/arrow_black_up.gif") center no-repeat;
  color: transparent;
  cursor: pointer;
  float: left;
  font-size: 1px;
  height: 24px;
  left: 0;
  position: absolute;
  top: 0;
  width: 24px;
  z-index: 1; }
  .minimize + h2 {
    padding-left: 24px !important; }

.minimized {
  float: none;
  position: absolute; }
  .minimized > .minimize {
    background: url("img/arrow_black_down.gif") center no-repeat; }

table.worksheet > tbody > tr > td > input {
  margin: 0 -3px -1px -2px; }

.ui-menu .ui-menu-item {
  height: 1.2em; }

